--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -8,16 +8,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
+    
+    # 🚨 THIS IS THE MISSING PIECE 🚨
+    permissions: 
+      contents: write
+      
     steps:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
+          
       - name: Commit & Push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A .
-          git commit -m "generated"
-          git push
+          # Safety check: Only commit if files actually changed
+          if [[ -n $(git status -s) ]]; then
+            git commit -m "generated"
+            git push
+          else
+            echo "No changes to commit. Skipping push."
+          fi
